kubernetes/12-istio-raw/02-gateway_virtualServices/gateway-a.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fla-gateway-a  # select gateway namespace
  namespace: default-a
  labels:
    app: fla-app-a  # may not required for group app
spec:
  selector:
    istio: ingressgateway  # default istio istio-ingressgateway.istio-system.svc
  servers:
  - hosts:
    - "*"
    #- "ingress-istio.minikube.com"
    port:
      name: http-web # not is a service port name
      number: 80
      protocol: HTTP  # HTTP, HTTPS
    tls:
      #mode: SIMPLE
      #credentialName: default-a/fla-secret-service-a-tls  # todo fix

# curl istio-ingressgateway.istio-system.svc.cluster.local
