kubernetes/12-istio-raw/02-gateway_virtualServices/virtualservice-a.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fla-virtualservice-a
  namespace: fla-na-a
  labels:
    app: fla-app-a  # may not required for group app
spec:
  hosts:
  - '*'
  #- "ingress-istio.minikube.com"
  gateways:
  - fla-gateway-a
  http:
  #- match:
  #  - uri:
  #      prefix: /kiali
  #  rewrite:
  #    uri: /kiali
  #  route:
  #  - destination:
  #      host: kiali
  #      port:
  #        number: 20001
  #- match:
  #  - uri:
  #      prefix: /grafana
  #  rewrite:
  #    uri: /grafana
  #  route:
  #  - destination:
  #      host: grafana
  #      port:
  #        number: 3000
  - name: fla-virtualservice-a-01
    timeout: 30s 
    route:
    - destination:
        host: fla-service-a
        port:
          number: 8080
    #  weight: 80  # 100 80 50
    #- destination:
    #    host: fla-service-b
    #    port:
    #      number: 80
    #  weight: 15
    #- destination:
    #    host: fla-service-c
    #    port:
    #      number: 80
    #  weight: 5
